# Oxen

./: .gitignore  Makefile  README.md  docker-compose.yml
client/: pyproject.toml
client/oxendb/: __init__.py  batch.py  client.py  connection.py  exceptions.py  models.py  query_builder.py
client/oxendb/_internal/: __init__.py  auth.py  serializer.py
core/: Cargo.toml
core/src/: config.rs  error.rs  lib.rs
core/src/cache/: block_cache.rs  mod.rs
core/src/compaction/: leveled.rs  merger.rs  mod.rs  scheduler.rs
core/src/ffi/: c_api.rs  mod.rs
core/src/manifest/: mod.rs  version.rs
core/src/memtable/: arena.rs  mod.rs  skiplist.rs
core/src/sstable/: block.rs  bloom.rs  builder.rs  index.rs  mod.rs  reader.rs
core/src/storage/: engine.rs  mod.rs
core/src/wal/: mod.rs  reader.rs  record.rs  writer.rs
demo/: notes.py  start.sh
server/: go.mod  go.sum
server/cmd/oxendb/: main.go
server/internal/api/: handler_admin.go  handler_batch.go  handler_kv.go  handler_query.go  middleware.go  response.go  router.go
server/internal/bridge/: bridge.go  bridge_nocgo.go  oxendb.h
server/internal/config/: config.go
server/internal/metrics/: prometheus.go
server/internal/pg/: auth.go  conn.go  handler.go  listener.go  session.go
server/internal/pool/: connpool.go
server/internal/query/: ast.go  executor.go  lexer.go  parser.go
server/internal/sql/: engine.go  executor.go  planner.go
server/internal/sql/catalog/: catalog.go  descriptor.go
server/internal/sql/codec/: codec.go
server/internal/sql/result/: result.go
server/proto/: oxendb.proto
(+2 files in other folders)
