[package]
name = "oxendb-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
crossbeam-skiplist = "0.1"
lz4_flex = "0.11"
crc32fast = "1.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
